tests/bad/matthieu.tig
let
var x:= 0
var y := (x := x + 1; range(0,1)) | (x := x + 1; true)
in
if x = 1 & x = 2 then 1/0 else 42
end